--- a/develop/Assets/css/style.css
+++ b/develop/Assets/css/style.css
@@ -1,18 +1,47 @@
-.slide{
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    z-index: 1;
-    opacity: 0;
-    transition: opacity 0.5s;
-  }
-  .active-slide{
-    opacity: 1;
-    z-index: 2;
-  }
-  .quiz-container{
-    position: relative;
-    height: 200px;
-    margin-top: 40px;
-  }
+ *, *::before, *::after{
+    box-sizing: border-box;
+    font-family: itc-avant-garde-gothic-pro,sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+/* :root
+
+body {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100vw;
+    height: 100vh;
+}  */
+
+.btn-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 12px;
+    margin: 25px 0;
+}
+
+.btn {
+    border: 1px solid green
+}
+
+.btn.correct {
+    color:greenyellow
+}
+
+.btn.wrong {
+    color:crimson
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
+}
