--- a/develop/Assets/css/style.css
+++ b/develop/Assets/css/style.css
@@ -1,7 +1,7 @@
- *, *::before, *::after{
-    box-sizing: border-box;
+ * {
+    /* box-sizing: border-box; */
     font-family: itc-avant-garde-gothic-pro,sans-serif;
-    font-weight: 700;
+    font-weight: 550;
     font-style: normal;
 }
 
@@ -16,6 +16,9 @@ body {
     width:100vw;
     height: 100vh;
 }  */
+button:hover {
+    background-color: green;
+  }
 
 .btn-grid {
     display: grid;
@@ -24,8 +27,13 @@ body {
     margin: 25px 0;
 }
 
-.btn {
-    border: 1px solid green
+.btn, #startQuiz {
+    border: 2px solid rgb(221, 0, 255);
+    padding: 10px;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    
 }
 
 .btn.correct {
